--- a/exercise-introduction.ipynb
+++ b/exercise-introduction.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "290a696e",
+   "id": "0165c3c2",
    "metadata": {
     "papermill": {
-     "duration": 0.006068,
-     "end_time": "2023-01-19T08:01:33.126244",
+     "duration": 0.005632,
+     "end_time": "2023-01-19T08:04:06.168243",
      "exception": false,
-     "start_time": "2023-01-19T08:01:33.120176",
+     "start_time": "2023-01-19T08:04:06.162611",
      "status": "completed"
     },
     "tags": []
@@ -21,13 +21,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e98a87ed",
+   "id": "c3f7193e",
    "metadata": {
     "papermill": {
-     "duration": 0.004718,
-     "end_time": "2023-01-19T08:01:33.136162",
+     "duration": 0.004387,
+     "end_time": "2023-01-19T08:04:06.177825",
      "exception": false,
-     "start_time": "2023-01-19T08:01:33.131444",
+     "start_time": "2023-01-19T08:04:06.173438",
      "status": "completed"
     },
     "tags": []
@@ -43,19 +43,19 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "a9f71f9c",
+   "id": "49b89634",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-01-19T08:01:33.148030Z",
-     "iopub.status.busy": "2023-01-19T08:01:33.147569Z",
-     "iopub.status.idle": "2023-01-19T08:01:34.307086Z",
-     "shell.execute_reply": "2023-01-19T08:01:34.305907Z"
+     "iopub.execute_input": "2023-01-19T08:04:06.189860Z",
+     "iopub.status.busy": "2023-01-19T08:04:06.189146Z",
+     "iopub.status.idle": "2023-01-19T08:04:07.262911Z",
+     "shell.execute_reply": "2023-01-19T08:04:07.261760Z"
     },
     "papermill": {
-     "duration": 1.170473,
-     "end_time": "2023-01-19T08:01:34.311683",
+     "duration": 1.08291,
+     "end_time": "2023-01-19T08:04:07.265437",
      "exception": false,
-     "start_time": "2023-01-19T08:01:33.141210",
+     "start_time": "2023-01-19T08:04:06.182527",
      "status": "completed"
     },
     "tags": []
@@ -83,13 +83,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "62cb1d6c",
+   "id": "3a65b4b3",
    "metadata": {
     "papermill": {
-     "duration": 0.005249,
-     "end_time": "2023-01-19T08:01:34.322910",
+     "duration": 0.004225,
+     "end_time": "2023-01-19T08:04:07.275258",
      "exception": false,
-     "start_time": "2023-01-19T08:01:34.317661",
+     "start_time": "2023-01-19T08:04:07.271033",
      "status": "completed"
     },
     "tags": []
@@ -105,19 +105,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "d6687891",
+   "id": "e831226d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-01-19T08:01:34.335506Z",
-     "iopub.status.busy": "2023-01-19T08:01:34.334745Z",
-     "iopub.status.idle": "2023-01-19T08:01:34.424065Z",
-     "shell.execute_reply": "2023-01-19T08:01:34.422899Z"
+     "iopub.execute_input": "2023-01-19T08:04:07.285554Z",
+     "iopub.status.busy": "2023-01-19T08:04:07.285200Z",
+     "iopub.status.idle": "2023-01-19T08:04:07.353425Z",
+     "shell.execute_reply": "2023-01-19T08:04:07.352751Z"
     },
     "papermill": {
-     "duration": 0.098608,
-     "end_time": "2023-01-19T08:01:34.426760",
+     "duration": 0.076076,
+     "end_time": "2023-01-19T08:04:07.355727",
      "exception": false,
-     "start_time": "2023-01-19T08:01:34.328152",
+     "start_time": "2023-01-19T08:04:07.279651",
      "status": "completed"
     },
     "tags": []
@@ -144,13 +144,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "04fee9f7",
+   "id": "ef8f7a6b",
    "metadata": {
     "papermill": {
-     "duration": 0.004949,
-     "end_time": "2023-01-19T08:01:34.436925",
+     "duration": 0.004265,
+     "end_time": "2023-01-19T08:04:07.364647",
      "exception": false,
-     "start_time": "2023-01-19T08:01:34.431976",
+     "start_time": "2023-01-19T08:04:07.360382",
      "status": "completed"
     },
     "tags": []
@@ -162,19 +162,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "47c794db",
+   "id": "56714c55",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-01-19T08:01:34.449134Z",
-     "iopub.status.busy": "2023-01-19T08:01:34.448528Z",
-     "iopub.status.idle": "2023-01-19T08:01:34.466574Z",
-     "shell.execute_reply": "2023-01-19T08:01:34.465508Z"
+     "iopub.execute_input": "2023-01-19T08:04:07.375564Z",
+     "iopub.status.busy": "2023-01-19T08:04:07.374410Z",
+     "iopub.status.idle": "2023-01-19T08:04:07.391176Z",
+     "shell.execute_reply": "2023-01-19T08:04:07.390075Z"
     },
     "papermill": {
-     "duration": 0.026866,
-     "end_time": "2023-01-19T08:01:34.468922",
+     "duration": 0.024335,
+     "end_time": "2023-01-19T08:04:07.393355",
      "exception": false,
-     "start_time": "2023-01-19T08:01:34.442056",
+     "start_time": "2023-01-19T08:04:07.369020",
      "status": "completed"
     },
     "tags": []
@@ -304,13 +304,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ceee6198",
+   "id": "788face2",
    "metadata": {
     "papermill": {
-     "duration": 0.005128,
-     "end_time": "2023-01-19T08:01:34.479463",
+     "duration": 0.004363,
+     "end_time": "2023-01-19T08:04:07.402553",
      "exception": false,
-     "start_time": "2023-01-19T08:01:34.474335",
+     "start_time": "2023-01-19T08:04:07.398190",
      "status": "completed"
     },
     "tags": []
@@ -322,19 +322,19 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "009a0474",
+   "id": "79942580",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-01-19T08:01:34.492204Z",
-     "iopub.status.busy": "2023-01-19T08:01:34.491206Z",
-     "iopub.status.idle": "2023-01-19T08:01:34.497909Z",
-     "shell.execute_reply": "2023-01-19T08:01:34.497070Z"
+     "iopub.execute_input": "2023-01-19T08:04:07.413076Z",
+     "iopub.status.busy": "2023-01-19T08:04:07.412739Z",
+     "iopub.status.idle": "2023-01-19T08:04:07.419652Z",
+     "shell.execute_reply": "2023-01-19T08:04:07.418529Z"
     },
     "papermill": {
-     "duration": 0.015373,
-     "end_time": "2023-01-19T08:01:34.500127",
+     "duration": 0.014559,
+     "end_time": "2023-01-19T08:04:07.421573",
      "exception": false,
-     "start_time": "2023-01-19T08:01:34.484754",
+     "start_time": "2023-01-19T08:04:07.407014",
      "status": "completed"
     },
     "tags": []
@@ -346,7 +346,7 @@
     "# Define the models\n",
     "model_1 = RandomForestRegressor(n_estimators=50, random_state=0)\n",
     "model_2 = RandomForestRegressor(n_estimators=100, random_state=0)\n",
-    "model_3 = RandomForestRegressor(n_estimators=100,max_depth=7,criterion='absolute_error', random_state=0)\n",
+    "model_3 = RandomForestRegressor(n_estimators=100,criterion='absolute_error', random_state=0)\n",
     "model_4 = RandomForestRegressor(n_estimators=200, min_samples_split=20, random_state=0)\n",
     "model_5 = RandomForestRegressor(n_estimators=100, max_depth=7, random_state=0)\n",
     "\n",
@@ -355,13 +355,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b0f9018",
+   "id": "253c39f0",
    "metadata": {
     "papermill": {
-     "duration": 0.006785,
-     "end_time": "2023-01-19T08:01:34.512433",
+     "duration": 0.005387,
+     "end_time": "2023-01-19T08:04:07.431647",
      "exception": false,
-     "start_time": "2023-01-19T08:01:34.505648",
+     "start_time": "2023-01-19T08:04:07.426260",
      "status": "completed"
     },
     "tags": []
@@ -375,19 +375,19 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "b4d7bd67",
+   "id": "53856aa4",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-01-19T08:01:34.525094Z",
-     "iopub.status.busy": "2023-01-19T08:01:34.524692Z",
-     "iopub.status.idle": "2023-01-19T08:01:38.508915Z",
-     "shell.execute_reply": "2023-01-19T08:01:38.507829Z"
+     "iopub.execute_input": "2023-01-19T08:04:07.441842Z",
+     "iopub.status.busy": "2023-01-19T08:04:07.441524Z",
+     "iopub.status.idle": "2023-01-19T08:04:11.340101Z",
+     "shell.execute_reply": "2023-01-19T08:04:11.338825Z"
     },
     "papermill": {
-     "duration": 3.994348,
-     "end_time": "2023-01-19T08:01:38.512154",
+     "duration": 3.906336,
+     "end_time": "2023-01-19T08:04:11.342399",
      "exception": false,
-     "start_time": "2023-01-19T08:01:34.517806",
+     "start_time": "2023-01-19T08:04:07.436063",
      "status": "completed"
     },
     "tags": []
@@ -399,7 +399,7 @@
      "text": [
       "Model 1 MAE: 24015\n",
       "Model 2 MAE: 23740\n",
-      "Model 3 MAE: 23496\n",
+      "Model 3 MAE: 23528\n",
       "Model 4 MAE: 23996\n",
       "Model 5 MAE: 23706\n"
      ]
@@ -421,13 +421,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "71a6e00c",
+   "id": "54c9a509",
    "metadata": {
     "papermill": {
-     "duration": 0.005647,
-     "end_time": "2023-01-19T08:01:38.525866",
+     "duration": 0.004773,
+     "end_time": "2023-01-19T08:04:11.352580",
      "exception": false,
-     "start_time": "2023-01-19T08:01:38.520219",
+     "start_time": "2023-01-19T08:04:11.347807",
      "status": "completed"
     },
     "tags": []
@@ -441,19 +441,19 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "7c902816",
+   "id": "eabb3cae",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-01-19T08:01:38.539049Z",
-     "iopub.status.busy": "2023-01-19T08:01:38.538662Z",
-     "iopub.status.idle": "2023-01-19T08:01:38.547033Z",
-     "shell.execute_reply": "2023-01-19T08:01:38.545898Z"
+     "iopub.execute_input": "2023-01-19T08:04:11.364319Z",
+     "iopub.status.busy": "2023-01-19T08:04:11.363326Z",
+     "iopub.status.idle": "2023-01-19T08:04:11.372086Z",
+     "shell.execute_reply": "2023-01-19T08:04:11.371221Z"
     },
     "papermill": {
-     "duration": 0.017796,
-     "end_time": "2023-01-19T08:01:38.549303",
+     "duration": 0.016997,
+     "end_time": "2023-01-19T08:04:11.374357",
      "exception": false,
-     "start_time": "2023-01-19T08:01:38.531507",
+     "start_time": "2023-01-19T08:04:11.357360",
      "status": "completed"
     },
     "tags": []
@@ -494,19 +494,19 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "002daf6f",
+   "id": "e1b4ea3e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-01-19T08:01:38.563771Z",
-     "iopub.status.busy": "2023-01-19T08:01:38.562717Z",
-     "iopub.status.idle": "2023-01-19T08:01:38.567571Z",
-     "shell.execute_reply": "2023-01-19T08:01:38.566781Z"
+     "iopub.execute_input": "2023-01-19T08:04:11.386885Z",
+     "iopub.status.busy": "2023-01-19T08:04:11.386308Z",
+     "iopub.status.idle": "2023-01-19T08:04:11.390355Z",
+     "shell.execute_reply": "2023-01-19T08:04:11.389498Z"
     },
     "papermill": {
-     "duration": 0.014262,
-     "end_time": "2023-01-19T08:01:38.569693",
+     "duration": 0.012206,
+     "end_time": "2023-01-19T08:04:11.392089",
      "exception": false,
-     "start_time": "2023-01-19T08:01:38.555431",
+     "start_time": "2023-01-19T08:04:11.379883",
      "status": "completed"
     },
     "tags": []
@@ -520,13 +520,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0e216f25",
+   "id": "4a04922b",
    "metadata": {
     "papermill": {
-     "duration": 0.005538,
-     "end_time": "2023-01-19T08:01:38.581143",
+     "duration": 0.004839,
+     "end_time": "2023-01-19T08:04:11.402241",
      "exception": false,
-     "start_time": "2023-01-19T08:01:38.575605",
+     "start_time": "2023-01-19T08:04:11.397402",
      "status": "completed"
     },
     "tags": []
@@ -540,19 +540,19 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "d1cac5b8",
+   "id": "c12c55e2",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-01-19T08:01:38.594987Z",
-     "iopub.status.busy": "2023-01-19T08:01:38.594301Z",
-     "iopub.status.idle": "2023-01-19T08:01:38.603397Z",
-     "shell.execute_reply": "2023-01-19T08:01:38.602510Z"
+     "iopub.execute_input": "2023-01-19T08:04:11.413422Z",
+     "iopub.status.busy": "2023-01-19T08:04:11.413142Z",
+     "iopub.status.idle": "2023-01-19T08:04:11.421250Z",
+     "shell.execute_reply": "2023-01-19T08:04:11.420244Z"
     },
     "papermill": {
-     "duration": 0.018596,
-     "end_time": "2023-01-19T08:01:38.605503",
+     "duration": 0.015797,
+     "end_time": "2023-01-19T08:04:11.423086",
      "exception": false,
-     "start_time": "2023-01-19T08:01:38.586907",
+     "start_time": "2023-01-19T08:04:11.407289",
      "status": "completed"
     },
     "tags": []
@@ -594,19 +594,19 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "97300181",
+   "id": "c6106009",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-01-19T08:01:38.619875Z",
-     "iopub.status.busy": "2023-01-19T08:01:38.619199Z",
-     "iopub.status.idle": "2023-01-19T08:01:38.627983Z",
-     "shell.execute_reply": "2023-01-19T08:01:38.627073Z"
+     "iopub.execute_input": "2023-01-19T08:04:11.435370Z",
+     "iopub.status.busy": "2023-01-19T08:04:11.434988Z",
+     "iopub.status.idle": "2023-01-19T08:04:11.441305Z",
+     "shell.execute_reply": "2023-01-19T08:04:11.440692Z"
     },
     "papermill": {
-     "duration": 0.018501,
-     "end_time": "2023-01-19T08:01:38.630144",
+     "duration": 0.014327,
+     "end_time": "2023-01-19T08:04:11.442935",
      "exception": false,
-     "start_time": "2023-01-19T08:01:38.611643",
+     "start_time": "2023-01-19T08:04:11.428608",
      "status": "completed"
     },
     "tags": []
@@ -655,13 +655,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c1192a3",
+   "id": "0bf3e249",
    "metadata": {
     "papermill": {
-     "duration": 0.006082,
-     "end_time": "2023-01-19T08:01:38.642568",
+     "duration": 0.005326,
+     "end_time": "2023-01-19T08:04:11.453675",
      "exception": false,
-     "start_time": "2023-01-19T08:01:38.636486",
+     "start_time": "2023-01-19T08:04:11.448349",
      "status": "completed"
     },
     "tags": []
@@ -673,19 +673,19 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "09a632d5",
+   "id": "843a7df2",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-01-19T08:01:38.657360Z",
-     "iopub.status.busy": "2023-01-19T08:01:38.656691Z",
-     "iopub.status.idle": "2023-01-19T08:01:41.703128Z",
-     "shell.execute_reply": "2023-01-19T08:01:41.701973Z"
+     "iopub.execute_input": "2023-01-19T08:04:11.466635Z",
+     "iopub.status.busy": "2023-01-19T08:04:11.466279Z",
+     "iopub.status.idle": "2023-01-19T08:04:14.977988Z",
+     "shell.execute_reply": "2023-01-19T08:04:14.977092Z"
     },
     "papermill": {
-     "duration": 3.056788,
-     "end_time": "2023-01-19T08:01:41.705645",
+     "duration": 3.520808,
+     "end_time": "2023-01-19T08:04:14.980112",
      "exception": false,
-     "start_time": "2023-01-19T08:01:38.648857",
+     "start_time": "2023-01-19T08:04:11.459304",
      "status": "completed"
     },
     "tags": []
@@ -706,13 +706,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "383d8d9a",
+   "id": "25313d1d",
    "metadata": {
     "papermill": {
-     "duration": 0.006089,
-     "end_time": "2023-01-19T08:01:41.718314",
+     "duration": 0.005057,
+     "end_time": "2023-01-19T08:04:14.990828",
      "exception": false,
-     "start_time": "2023-01-19T08:01:41.712225",
+     "start_time": "2023-01-19T08:04:14.985771",
      "status": "completed"
     },
     "tags": []
@@ -735,13 +735,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e05b7689",
+   "id": "71181ef9",
    "metadata": {
     "papermill": {
-     "duration": 0.005968,
-     "end_time": "2023-01-19T08:01:41.730630",
+     "duration": 0.005126,
+     "end_time": "2023-01-19T08:04:15.001166",
      "exception": false,
-     "start_time": "2023-01-19T08:01:41.724662",
+     "start_time": "2023-01-19T08:04:14.996040",
      "status": "completed"
     },
     "tags": []
@@ -756,13 +756,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "35eb0e89",
+   "id": "003d7c6d",
    "metadata": {
     "papermill": {
-     "duration": 0.005994,
-     "end_time": "2023-01-19T08:01:41.743007",
+     "duration": 0.005149,
+     "end_time": "2023-01-19T08:04:15.011729",
      "exception": false,
-     "start_time": "2023-01-19T08:01:41.737013",
+     "start_time": "2023-01-19T08:04:15.006580",
      "status": "completed"
     },
     "tags": []
@@ -797,14 +797,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 18.011121,
-   "end_time": "2023-01-19T08:01:42.471393",
+   "duration": 17.331165,
+   "end_time": "2023-01-19T08:04:15.636320",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2023-01-19T08:01:24.460272",
+   "start_time": "2023-01-19T08:03:58.305155",
    "version": "2.3.4"
   }
  },
